--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <p>Here are some of the projects I have worked on:</p>
         <div class="projects-container">
             <div class="project-item">
-                <h3>Project One</h3>
-                <p>Description of Project One.</p>
-                <a href="#">More Info</a>
+                <h3>Personal Portfolio</h3>
+                <p>Explore my personal portfolio, designed with HTML and CSS to showcase my skills and projects. It features a modern, responsive design with sections on my background, skills, academic achievements, and work.</p>
+                <a href="https://manojkumar28.netlify.app/">More Info</a>
             </div>
             <div class="project-item">
                 <h3>Project Two</h3>
