--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="project-item">
                 <h3>Personal Portfolio</h3>
                 <p>Explore my personal portfolio, designed with HTML and CSS to showcase my skills and projects. It features a modern, responsive design with sections on my background, skills, academic achievements, and work.</p>
-                <a href="https://manojkumar28.netlify.app/">More Info</a>
+                <a href="https://github.com/Manojkumar2002003/Personal-Portfolio.git">More Info</a>
             </div>
             <div class="project-item">
                 <h3>Project Two</h3>
